add environment props setup. add download chrome driver download tool