@@ -17,7 +17,7 @@
 	<dependencies>
 
 		<dependency>
-		<!-- allure report dependencies -->
+			<!-- allure report dependencies -->
 			<groupId>io.qameta.allure</groupId>
 			<artifactId>allure-cucumber-jvm</artifactId>
 			<version>2.0-BETA6</version>
@@ -98,6 +98,22 @@
 					</systemPropertyVariables>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.20</version>
+				<configuration>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.aspectj</groupId>
+						<artifactId>aspectjweaver</artifactId>
+						<version>${aspectj.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+
 		</plugins>
 	</build>
 </project>
